Fix overflow-y of container-main in shrink scroller mode

--- a/less/bootstrap-theme/wrapper.less
+++ b/less/bootstrap-theme/wrapper.less
@@ -36,6 +36,7 @@ html.scroller-shrink {
     body {
         > .container-main {
             height: auto;
+            overflow-y: inherit;
             -webkit-overflow-scrolling: auto;
         }
     }
